--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
+    <h1>Hello Rizwan Hussain</h1>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
