--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <div>
     <h1>Hello Rizwan Hussain</h1>
     </div>
+    <div>
+    <h1>Hello Rizwan Hussain</h1>
+    </div>
+    <div>
+    <h1>Hello Rizwan Hussain</h1>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
